WET-140 Spacing Issue Fixed

--- a/src/base/bootstrap-overrides/_base.scss
+++ b/src/base/bootstrap-overrides/_base.scss
@@ -265,6 +265,10 @@ abbr[title] {
 			}
 		}
 
+		p {
+			margin-bottom: 11.5px;
+		}
+
 		strong,
 		em,
 		span {
